更新部分数据字段
