# api/http/v1/mail.go
@@ -11,12 +11,12 @@ import (
 // MailSend 验证码邮件
 // @Summary 验证码邮件发送
 // @Description 验证码邮件发送接口
-// @Tags Mail
+// @Tags Email
 // @Produce  application/json
 // @Param Authorization header string true "用户令牌"
 // @Success 0 {object} serializer.Response "msg: "Success"
 // @Failure 30001 {object} serializer.Response "msg: 参数错误"
-// @Router /mail/verify [get]
+// @Router /email/verify [get]
 func MailSend(c *gin.Context) {
 	var form user.MailSendService
 	res := form.Send(c)
@@ -26,14 +26,14 @@ func MailSend(c *gin.Context) {
 // MailVerify 验证邮箱
 // @Summary 验证邮件发送
 // @Description 验证邮件发送接口
-// @Tags Mail
+// @Tags Email
 // @Accept application/json
 // @Produce  application/json
 // @Param Authorization header string true "用户令牌"
 // @Param form body user.MailVerifyService true "验证码"
 // @Success 0 {object} serializer.Response "msg: "Success"
 // @Failure 30001 {object} serializer.Response "msg: 参数错误"
-// @Router /mail/verify [post]
+// @Router /email/verify [post]
 func MailVerify(c *gin.Context) {
 	var form user.MailVerifyService
 	if err := c.ShouldBind(&form); err == nil {
