# docs/swagger.json
@@ -9,14 +9,14 @@
     "host": "127.0.0.1:3000",
     "basePath": "/api/v1",
     "paths": {
-        "/mail/verify": {
+        "/email/verify": {
             "get": {
                 "description": "验证码邮件发送接口",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Mail"
+                    "Email"
                 ],
                 "summary": "验证码邮件发送",
                 "parameters": [
@@ -32,7 +32,7 @@
                     "0": {
                         "description": "msg: \"Success",
                         "schema": {
-                            "$ref": "#/definitions/serializer.UserPointsResponse"
+                            "$ref": "#/definitions/serializer.Response"
                         }
                     },
                     "30001": {
@@ -52,7 +52,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Mail"
+                    "Email"
                 ],
                 "summary": "验证邮件发送",
                 "parameters": [
@@ -77,7 +77,7 @@
                     "0": {
                         "description": "msg: \"Success",
                         "schema": {
-                            "$ref": "#/definitions/serializer.UserPointsResponse"
+                            "$ref": "#/definitions/serializer.Response"
                         }
                     },
                     "30001": {
@@ -96,7 +96,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Points"
+                    "Task"
                 ],
                 "summary": "普通签到",
                 "parameters": [
@@ -106,22 +106,13 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
-                    },
-                    {
-                        "description": "用户信息",
-                        "name": "form",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/points.SignService"
-                        }
                     }
                 ],
                 "responses": {
                     "0": {
                         "description": "msg: \"Success",
                         "schema": {
-                            "$ref": "#/definitions/serializer.UserPointsResponse"
+                            "$ref": "#/definitions/user.BaseInfoResponse"
                         }
                     },
                     "60001": {
@@ -161,7 +152,7 @@
                     "0": {
                         "description": "msg: Success",
                         "schema": {
-                            "$ref": "#/definitions/serializer.LoginResponse"
+                            "$ref": "#/definitions/user.LoginResponse"
                         }
                     },
                     "30001": {
@@ -196,7 +187,7 @@
                     "0": {
                         "description": "msg: Success",
                         "schema": {
-                            "$ref": "#/definitions/serializer.UserResponse"
+                            "$ref": "#/definitions/user.BaseInfoResponse"
                         }
                     },
                     "50000": {
@@ -236,7 +227,7 @@
                     "0": {
                         "description": "msg: Success",
                         "schema": {
-                            "$ref": "#/definitions/serializer.UserResponse"
+                            "$ref": "#/definitions/user.BaseInfoResponse"
                         }
                     },
                     "30001": {
@@ -249,7 +240,7 @@
             }
         },
         "/user/update": {
-            "post": {
+            "put": {
                 "description": "用户信息更新接口",
                 "consumes": [
                     "application/json"
@@ -283,82 +274,7 @@
                     "0": {
                         "description": "msg: \"Success",
                         "schema": {
-                            "$ref": "#/definitions/serializer.UserResponse"
-                        }
-                    },
-                    "30001": {
-                        "description": "msg: 参数错误",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/words/:id": {
-            "get": {
-                "description": "文字查看接口",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Words"
-                ],
-                "summary": "文字查看",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Words ID",
-                        "name": "WID",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "0": {
-                        "description": "msg:\"获取成功",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.WordsResponse"
-                        }
-                    },
-                    "30001": {
-                        "description": "msg: 参数错误",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/words/post": {
-            "post": {
-                "description": "文字发表接口",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Words"
-                ],
-                "summary": "文字发表",
-                "parameters": [
-                    {
-                        "description": "文字发表信息",
-                        "name": "form",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/words.PostService"
-                        }
-                    }
-                ],
-                "responses": {
-                    "0": {
-                        "description": "msg:\"发表成功",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.WordsResponse"
+                            "$ref": "#/definitions/user.BaseInfoResponse"
                         }
                     },
                     "30001": {
@@ -372,10 +288,71 @@
         }
     },
     "definitions": {
-        "points.SignService": {
-            "type": "object"
+        "serializer.Response": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "object"
+                },
+                "data": {
+                    "type": "object"
+                },
+                "msg": {
+                    "type": "string"
+                }
+            }
         },
-        "serializer.LoginResponse": {
+        "user.BaseInfoResponse": {
+            "type": "object",
+            "properties": {
+                "account_state": {
+                    "type": "string"
+                },
+                "birthday": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "credit": {
+                    "type": "integer"
+                },
+                "exp": {
+                    "type": "integer"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "join_time": {
+                    "type": "string"
+                },
+                "level": {
+                    "type": "integer"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "email_verify": {
+                    "type": "boolean"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "province": {
+                    "type": "string"
+                },
+                "sign": {
+                    "type": "string"
+                },
+                "uid": {
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.LoginResponse": {
             "type": "object",
             "properties": {
                 "token": {
@@ -389,95 +366,6 @@
                 "username": {
                     "description": "用户名",
                     "type": "string"
-                }
-            }
-        },
-        "serializer.Response": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer"
-                },
-                "data": {
-                    "type": "object"
-                },
-                "err": {
-                    "type": "string"
-                },
-                "msg": {
-                    "type": "string"
-                }
-            }
-        },
-        "serializer.UserPointsResponse": {
-            "type": "object",
-            "properties": {
-                "coins": {
-                    "type": "integer"
-                },
-                "exp": {
-                    "type": "integer"
-                },
-                "level": {
-                    "type": "integer"
-                }
-            }
-        },
-        "serializer.UserResponse": {
-            "type": "object",
-            "properties": {
-                "avatar": {
-                    "type": "string"
-                },
-                "birthday": {
-                    "type": "string"
-                },
-                "gender": {
-                    "type": "string"
-                },
-                "join_time": {
-                    "type": "integer"
-                },
-                "mail": {
-                    "type": "string"
-                },
-                "nickname": {
-                    "type": "string"
-                },
-                "silence": {
-                    "type": "boolean"
-                },
-                "uid": {
-                    "type": "integer"
-                },
-                "user_points": {
-                    "$ref": "#/definitions/serializer.UserPointsResponse"
-                },
-                "username": {
-                    "type": "string"
-                },
-                "verify": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "serializer.WordsResponse": {
-            "type": "object",
-            "properties": {
-                "content": {
-                    "type": "string"
-                },
-                "create_at": {
-                    "type": "integer"
-                },
-                "publisher": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "integer"
-                },
-                "wid": {
-                    "type": "integer"
                 }
             }
         },
@@ -498,6 +386,9 @@
         },
         "user.MailVerifyService": {
             "type": "object",
+            "required": [
+                "code"
+            ],
             "properties": {
                 "code": {
                     "type": "string"
@@ -507,13 +398,13 @@
         "user.RegisterService": {
             "type": "object",
             "required": [
-                "mail",
+                "email",
                 "nickname",
                 "password",
                 "username"
             ],
             "properties": {
-                "mail": {
+                "email": {
                     "type": "string"
                 },
                 "nickname": {
@@ -533,24 +424,23 @@
                 "birthday": {
                     "type": "string"
                 },
-                "gender": {
-                    "type": "integer"
+                "city": {
+                    "type": "string"
                 },
-                "mail": {
+                "gender": {
+                    "description": "只能为 男、女、其他、保密",
+                    "type": "string"
+                },
+                "email": {
                     "type": "string"
                 },
                 "nickname": {
                     "type": "string"
-                }
-            }
-        },
-        "words.PostService": {
-            "type": "object",
-            "required": [
-                "content"
-            ],
-            "properties": {
-                "content": {
+                },
+                "province": {
+                    "type": "string"
+                },
+                "sign": {
                     "type": "string"
                 }
             }
